# image-compressor

./: .gitignore  .prettierrc  AGENTS.md  LICENSE  README.md  ___package_bck_up.json  eslint.config.js  index.html  index.js  logo.psd  main.js  manifest.json  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  update-android-theme.js  vite.config.ts  webpack.config.js
.github/workflows/: deploy.yml  desktop-release.yml  main.yml
css/: app.css  style.css
js/: _entry.js  app.js  app.js.LICENSE.txt  before-after.js  compare-image.js  image-compressor.js  script.js
public/: image-processor.worker.js  manifest.json
scripts/: setup-android-signing.sh
scss/: _entry.scss  before-after.scss  compare-image.scss  main.scss  style.scss  typography.scss
src/: App.tsx  fonts.css  index.css
src-tauri/: Cargo.toml  tauri.android.conf.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs
src/app/: fonts.css  globals.css  layout.jsx  page.jsx
src/components/: action-buttons.tsx  compressed-images-grid.tsx  drop-zone.tsx  file-uploader.jsx  footer.tsx  header.tsx  image-card.jsx  image-list.jsx  image-preview-card.tsx  image-quality-slider.tsx  loading-spinner.tsx  mode-toggle.jsx  mode-toggle.tsx  pwa-install-provider.jsx  pwa-tracker.jsx  share-menu.jsx  theme-provider.tsx
src/hooks/: use-file-processor.js  use-toast.js  useDragAndDrop.ts  useImageCompression.ts
src/lib/: download.ts  file-validation.ts  image-processing.ts  image-processor.js  platform.ts  (+2 more)
(+14 files in other folders)
